# limbus-company-battle-system-cmd-ver

./: .gitignore  ActionQueue.h  ActionSlot.h  Battle Manager.h  CMakeLists.txt  Character Pool.h  Character.h  ConsoleUtils.h  Data.h  DoubleCountEffect.h  Effect Manager.h  Effect.h  EventBus.h  README.md  Random Manager.h  SingleCountEffect.h  Type.h  Vector2.h  XML.h  main.cpp  pugixml.cpp
script/: Leader.xml  Type.xml
script/Character/: albina.xml  test.xml  valencina.xml
script/Character/holy_war/: mad_yhb.xml  qing.xml  zjc.xml  zzy.xml
